<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="MAIN" Id="{d72f5376-9d08-4c56-b91e-83212ab541cb}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	stPSUSlot3		:	ST_PSUInputsMX;
	stMS4208Slot7	:	ST_MS4208;
	stIoModulSlot8	:	ST_IoModulMO1008;
	stIoModulSlot9	:	ST_IoModulMO2008;
	stIoModulSlot10	:	ST_IoModulMo2338;
	
	fTest			:	REAL := 3.141;
	
	bEnableBluetoothDiagnosis	AT%Q* 	:  	BOOL := TRUE;
	bActivatePairingMode		AT%Q*	:	BOOL := TRUE;
	
	fbRunOutputs	:	FB_RunOutputs;
	fbRunOutputs2	:	FB_RunOutputs;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbRunOutputs(bEnable:=TRUE , tStepSpeed:=T#500MS , tCycleDelay:=T#1000MS , Outputs_MX:=stIoModulSlot9.stDOSOutputs );
fbRunOutputs2(bEnable:= , tStepSpeed:=T#500MS , tCycleDelay:=T#1000MS , Outputs_MX:=stIoModulSlot10.stDOSOutputs );
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>